fix(style): changed mantine textinput error colors and added styles t… (#2998)
* fix(style): changed mantine textinput error colors and added styles to collection disabled items

* feat(select): add the same error colors to the Select component

* feat(inputs): *added the style on inputWrapper so it covers them all

* fix(style): removed useless textinput style

--- a/packages/style/scss/controls/text-input.scss
+++ b/packages/style/scss/controls/text-input.scss
@@ -60,11 +60,6 @@
         --status-text-color: var(--critical-100);
     }
 
-    &.valid {
-        --status-color: var(--success-60);
-        --status-text-color: var(--success-100);
-    }
-
     &.warning {
         --status-color: var(--warning-70);
         --status-text-color: var(--warning-90);
